[Login] Fix social login logo overlap

--- a/SoloLearn/src/containers/Login/style.scss
+++ b/SoloLearn/src/containers/Login/style.scss
@@ -124,7 +124,7 @@
 						flex: 1;
 						height: 40px;
 						line-height: 40px;
-						font-size: 25px;
+						font-size: 24px;
 						color: #fff;
 						flex-shrink: 0;
 						position: relative;
@@ -138,7 +138,7 @@
 							background: none;
 							cursor: pointer;
 							padding-left: 10px;
-							font-size: 16px;
+							font-size: 14px;
 						}
 						.fab {
 							padding-left: 10px;
